manifests/apps/product/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: produdct
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: 869681612022.dkr.ecr.us-east-1.amazonaws.com/product:latest
