manifests/apps/product/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: produdct
spec:
  ports:
  - name: http
    targetPort: 8000
    port: 80
  selector:
    app: product
