manifests/apps/product/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product
  namespace: produdct
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: traefik-basic-auth@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 80
